--- a/templates/yum.conf.j2
+++ b/templates/yum.conf.j2
@@ -1,7 +1,3 @@
 {{ ansible_managed | comment }}
-{% for section, options in yumconf_config.iteritems() -%}
-  {{ "\n" }}[{{ section }}]{{ "\n" }}
-  {%- for key, value in options.iteritems() | sort -%}
-    {{ key }}={{ value }}{{ "\n" }}
-  {%- endfor %}
-{% endfor %}
+
+{{ yumconf_config | encode_ini }}
